Fix spacing on event summary (round 1)

--- a/frontend/src/pages/ActivityReport/index.scss
+++ b/frontend/src/pages/ActivityReport/index.scss
@@ -18,7 +18,7 @@
 }
 
 .smart-hub--form-large {
-  max-width: 33rem;
+  max-width: 34rem;
 }
 
 .usa-label {
